--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ dependency-reduced-pom.xml
 *.code-workspace
 
 # IDE - Other
+bin/
 .idea/
 *.iml
 *.iws
@@ -44,3 +45,7 @@ logs/
 # Local environment
 .env
 .env.local
+/private.pem
+/private_key_b64.txt
+/public.pem
+/public_key_b64.txt
